--- a/Adventure_Prototype/Adventure_Prototype/Adventure_Prototype/Adventure_Prototype.csproj
+++ b/Adventure_Prototype/Adventure_Prototype/Adventure_Prototype/Adventure_Prototype.csproj
@@ -60,6 +60,9 @@
     <XnaCompressContent>true</XnaCompressContent>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Lidgren.Network">
+      <HintPath>..\Resource\Lidgren.Network.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
       <Private>False</Private>
@@ -133,6 +136,7 @@
     <Compile Include="Classes\Inventory\Item.cs" />
     <Compile Include="Classes\IO\SoundManager.cs" />
     <Compile Include="Classes\Menu.cs" />
+    <Compile Include="Classes\Net\NetworkManager.cs" />
     <Compile Include="Classes\NPC.cs" />
     <Compile Include="Classes\Pipeline\GameRef.cs" />
     <Compile Include="Classes\Pipeline\RoomProcessor.cs" />
@@ -184,6 +188,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
