--- a/trunk/Adventure_Prototype/Adventure_Prototype/GameServer/GameServer.csproj
+++ b/trunk/Adventure_Prototype/Adventure_Prototype/GameServer/GameServer.csproj
@@ -57,6 +57,7 @@
     <Reference Include="Lidgren.Network">
       <HintPath>..\Resource\Lidgren.Network.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Xna.Framework.Game, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
