--- a/trunk/Adventure_Prototype/Adventure_Prototype/Adventure_Prototype/Adventure_Prototype.csproj
+++ b/trunk/Adventure_Prototype/Adventure_Prototype/Adventure_Prototype/Adventure_Prototype.csproj
@@ -114,9 +114,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes\Actions\Action.cs" />
-    <Compile Include="Classes\Actions\ActionList.cs" />
-    <Compile Include="Classes\Actions\ActionManager.cs" />
+    <Compile Include="Classes\Action\ActionList.cs" />
+    <Compile Include="Classes\Action\ActionManager.cs" />
+    <Compile Include="Classes\Action\Actions.cs" />
     <Compile Include="Classes\Animation.cs" />
     <Compile Include="Classes\Character.cs" />
     <Compile Include="Classes\Dev\Editor.cs" />
