--- a/Adventure_Prototype/ServerSoftware/ServerSoftware.csproj
+++ b/Adventure_Prototype/ServerSoftware/ServerSoftware.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Postman.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Radio.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -81,6 +82,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Adventure_Prototype\Adventure_Prototype\Adventure_Prototype.csproj">
+      <Project>{AEA62DDA-19D1-4978-AE85-0552823BBAF2}</Project>
+      <Name>Adventure_Prototype</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
