--- a/Adventure_Prototype/Adventure_Prototype/Adventure_Prototype/Adventure_Prototype.csproj
+++ b/Adventure_Prototype/Adventure_Prototype/Adventure_Prototype/Adventure_Prototype.csproj
@@ -124,7 +124,7 @@
     <Compile Include="Classes\Dialogues\Topic.cs" />
     <Compile Include="Classes\Events\Action.cs" />
     <Compile Include="Classes\Events\Event.cs" />
-    <Compile Include="Classes\Events\EventManager.cs" />
+    <Compile Include="Classes\Graphics\EventManager.cs" />
     <Compile Include="Classes\Events\RoomTransporter.cs" />
     <Compile Include="Classes\Graphics\Entity.cs" />
     <Compile Include="Classes\Graphics\GraphicsManager.cs" />
